test/compilable/imports/test2401a.d
module imports.test2401a;

alias int Foo;
