test/fail_compilation/imports/test2830d.d
module imports.test2830d;

private typedef int TestTypedef;
